--- a/demo/html5 css3/15种CSS3hover时效果/index.html
+++ b/demo/html5 css3/15种CSS3hover时效果/index.html
@@ -58,6 +58,7 @@
 			<img src="images/5.jpg">
 			<figcaption>
 				<h2>图片的标题</h2>
+				<span class=""></span>
 				<p>图片的描述信息</p>
 				<a href="#" target="_blank">view more</a>
 			</figcaption>
