--- a/my/code/index.html
+++ b/my/code/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+	<div style="position: fixed; top: 0; left: 0; z-index: 999; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9);">
+		<div style="position: absolute; top: 50%; left: 50%; width: 500px; height: 100px; line-height:100px; margin-left: -250px; margin-top: -50px; background-color: #fff; font-size:30px; text-align: center;">网站建设中...</div>
+	</div>
 	<!--header begin-->
 	<header class="clearfix">
 		<h1 class="logo"><a href="http://www.zhanghairui.com">张海瑞</a></h1>
